# mentorship-backend

./: .all-contributorsrc  .coveragerc  .dockerignore  .env  .env.sample  .env.template  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  .travis.yml  404.html  Dockerfile  Makefile  Procfile  README.md  api_extension(update)  codecov.yml  config.py  deploy.sh  dev-requirements.txt  docker-compose.test.yml  docker-compose.yml  email_confirmation.html  export.sh  index.html  install.bat  install.sh  jsr  manage.py  pyproject.toml  python  requirements.txt  run-tests.sh  run.py  scripts.py  sitemap.xml  swagger.json
.elasticbeanstalk/: config.yml
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  code_of_conduct.md  config.yml  dependabot.yml  reporting_guidelines.md
app/: constants.py  data.db  messages.py  messages_en.py  messages_enums.py  messages_pl.py  messenger.py  rate_limiter.py  rate_limits.py  rep_code.py  run.py  security.py
blog/: atom.xml  rss.xml
cli/: admin.py  database.py  initial_data.py  mentorship_relation.py  task.py  user.py  utils.py
docs/: CODEOWNERS  FlaskSQLAlchemy.md  Integrating_third_party_authentication.md  Mentorship Backend.postman_collection.json  README.md  Recommendation.md  UI_for_relation_request_email.md  backend_visualisation.md  ci_cd_process.md  code_of_conduct.md  code_organization.md  coding_standards.md  database-environment-variables.md  docusaurus.config.js  environment-variables.md  features.md  index.html  outreach-work.md  outreach_work.md  package.json  push_notifications.md  (+7 more)
(+291 files in other folders)
